--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -69,7 +69,7 @@
                         </ul>
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
-                            <button class="btn btn-danger img-fluid">Sign out</button>
+                            <button class="btn btn-danger img-fluid" type="submit" @click="logout()">Sign out</button>
                         </ul>
                     </div>
                 </div>
