--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_old.css">
     <title>Accounts</title>
 </head>
 
@@ -82,7 +82,10 @@
                     <div class="row mt-3">
                         <div class="col">
                             <h2 class="display-6 subtitle">Accounts</h2>
-
+                            <div v-if="showCreateAcc" id="newAccBlock">
+                            <button class="btn btn-info img-fluid" id="newAccount" type="submit" @click="newAccount()"><i class="bi bi-inboxes"></i>
+                                    New Account</button>
+                            </div>
                         </div>
                         <div class="row mx-2">
                             <div v-for="account in clientInfo.accounts" class="col-12 col-md-4 mt-2 ">
