--- a/src/main/resources/static/web/cards.html
+++ b/src/main/resources/static/web/cards.html
@@ -77,7 +77,11 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <h1 class="display-1">{{ clientInfo.firstName }} {{ clientInfo.lastName }}</h1>
+                            <h1 class="display-1" id="cardsTitle">{{ clientInfo.firstName }} {{ clientInfo.lastName }}</h1>
+                            <div v-if="debitCards.length < 3 || creditCards.length < 3" id="newCardBlock">
+                                <a class="btn btn-info img-fluid" id="addCard" href="/web/create-cards.html"><i class="bi bi-credit-card"></i>
+                                    Add Card</a>
+                            </div>
                         </div>
                     </div>
                     <div class="row mt-3">
